create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4158,6 +4158,28 @@ body {
 .cid-r6yjPlnRuy .mbr-text B {
   color: #000000;
 }
+.cid-r6yl1MR2Uu {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+@media (min-width: 992px) {
+  .cid-r6yl1MR2Uu .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 992px) {
+  .cid-r6yl1MR2Uu .mbr-figure {
+    padding-bottom: 1rem;
+  }
+}
+.cid-r6yl1MR2Uu .mbr-text {
+  color: #000000;
+  text-align: left;
+}
+.cid-r6yl1MR2Uu .mbr-text B {
+  color: #000000;
+}
 .cid-r6F8Zx0B0i {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -4202,26 +4224,26 @@ body {
 .cid-r6zh7K2Pfy .mbr-text B {
   color: #000000;
 }
-.cid-r6yl1MR2Uu {
+.cid-r6Fe1EP7iP {
   padding-top: 15px;
   padding-bottom: 15px;
   background-color: #ffffff;
 }
 @media (min-width: 992px) {
-  .cid-r6yl1MR2Uu .mbr-figure {
+  .cid-r6Fe1EP7iP .mbr-figure {
     padding-right: 4rem;
   }
 }
 @media (max-width: 992px) {
-  .cid-r6yl1MR2Uu .mbr-figure {
+  .cid-r6Fe1EP7iP .mbr-figure {
     padding-bottom: 1rem;
   }
 }
-.cid-r6yl1MR2Uu .mbr-text {
+.cid-r6Fe1EP7iP .mbr-text {
   color: #000000;
   text-align: left;
 }
-.cid-r6yl1MR2Uu .mbr-text B {
+.cid-r6Fe1EP7iP .mbr-text B {
   color: #000000;
 }
 .cid-r6zhgnbGtg {
