--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1399,9 +1399,185 @@ body {
 .cid-r6gvUyZZ2D P {
   color: #ffffff;
 }
+.cid-r6KyfzRvB5 {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r6ybS0673i {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6ybS0673i H2 {
+  color: #ffffff;
+}
+.cid-r6KcIuPMVY {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-r6KcIuPMVY .mbr-section-subtitle {
+  color: #767676;
+  font-weight: 300;
+}
+.cid-r6KcIuPMVY .number-wrap {
+  color: #000000;
+  border-color: rgba(255, 255, 255, 0.15);
+  position: relative;
+  display: inline-block;
+  text-align: center;
+  padding: 5px 10px 13px 10px;
+  margin: 0;
+  min-width: 118px;
+  border-radius: 2px;
+  max-width: 100%;
+}
+.cid-r6KcIuPMVY .number {
+  font-style: normal;
+  font-weight: 700;
+  text-transform: none;
+  letter-spacing: -2px;
+  font-size: 55px;
+  word-spacing: 0;
+  line-height: 1.3;
+  color: #1ea416;
+}
+.cid-r6KcIuPMVY .period {
+  display: block;
+  padding-top: 2px;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+.cid-r6KcIuPMVY .dot {
+  position: absolute;
+  top: -10px;
+  right: -1em;
+  width: 1em;
+  display: block;
+  font-size: 55px;
+  height: 83%;
+  overflow: hidden;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 89.65px;
+  text-transform: none;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #1ea416;
+}
+.cid-r6KcIuPMVY .countdown-cont {
+  background: linear-gradient(45deg, #ffffff, #ffffff);
+  max-width: 700px;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-r6KcIuPMVY .dot {
+    display: none;
+  }
+}
+@media (max-width: 543px) {
+  .cid-r6KcIuPMVY .number-wrap {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 550px) {
+  .cid-r6KcIuPMVY .col-xs-3 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .cid-r6KcIuPMVY .number-wrap {
+    min-width: auto;
+  }
+}
+@media (max-width: 440px) {
+  .cid-r6KcIuPMVY .number,
+  .cid-r6KcIuPMVY .dot {
+    font-size: 40px;
+  }
+}
+@media (max-width: 380px) {
+  .cid-r6KcIuPMVY .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-r6KcIuPMVY H4 {
+  color: #000000;
+  text-align: center;
+}
+.cid-r6zqm0ZSqV {
+  padding-top: 0px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-r6zqm0ZSqV .mbr-text,
+.cid-r6zqm0ZSqV blockquote {
+  color: #767676;
+}
+.cid-r6zqm0ZSqV .mbr-text P {
+  text-align: center;
+  color: #000000;
+}
+.cid-r6KfG3f36g {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-r6KfG3f36g .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r6KfG3f36g .media-row {
+  display: -webkit-flex;
+  justify-content: center;
+  -webkit-justify-content: center;
+}
+.cid-r6KfG3f36g .team-item {
+  transition: all .2s;
+  margin-bottom: 2rem;
+}
+.cid-r6KfG3f36g .team-item .item-image img {
+  width: 100%;
+}
+.cid-r6KfG3f36g .team-item .item-name p {
+  margin-bottom: 0;
+}
+.cid-r6KfG3f36g .team-item .item-role p {
+  margin-bottom: 0;
+}
+.cid-r6KfG3f36g .team-item .item-social {
+  display: -webkit-flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  -webkit-justify-content: center;
+}
+.cid-r6KfG3f36g .team-item .item-social .socicon {
+  color: #232323;
+  font-size: 17px;
+}
+.cid-r6KfG3f36g .team-item .item-caption {
+  background: #ffffff;
+}
+.cid-r6KfG3f36g .item-name {
+  color: #000000;
+}
+.cid-r6KfG3f36g .item-role P {
+  color: #000000;
+}
+.cid-r6KfG3f36g .item-name B {
+  color: #000000;
+}
+.cid-r6yc14mR1g {
+  padding-top: 30px;
+  padding-bottom: 0px;
+  background-color: #1ea416;
+}
+.cid-r6yc14mR1g H2 {
+  color: #ffffff;
+}
 .cid-r6ih0fUAIY {
-  padding-top: 45px;
-  padding-bottom: 45px;
+  padding-top: 60px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-r6ih0fUAIY .content-slider {
@@ -1679,179 +1855,8 @@ body {
 .cid-r6ih0fUAIY H2 {
   text-align: center;
 }
-.cid-r6ybS0673i {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #1ea416;
-}
-.cid-r6ybS0673i H2 {
-  color: #ffffff;
-}
-.cid-r6KcIuPMVY {
-  padding-top: 0px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-.cid-r6KcIuPMVY .mbr-section-subtitle {
-  color: #767676;
-  font-weight: 300;
-}
-.cid-r6KcIuPMVY .number-wrap {
-  color: #000000;
-  border-color: rgba(255, 255, 255, 0.15);
-  position: relative;
-  display: inline-block;
-  text-align: center;
-  padding: 5px 10px 13px 10px;
-  margin: 0;
-  min-width: 118px;
-  border-radius: 2px;
-  max-width: 100%;
-}
-.cid-r6KcIuPMVY .number {
-  font-style: normal;
-  font-weight: 700;
-  text-transform: none;
-  letter-spacing: -2px;
-  font-size: 55px;
-  word-spacing: 0;
-  line-height: 1.3;
-  color: #1ea416;
-}
-.cid-r6KcIuPMVY .period {
-  display: block;
-  padding-top: 2px;
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-}
-.cid-r6KcIuPMVY .dot {
-  position: absolute;
-  top: -10px;
-  right: -1em;
-  width: 1em;
-  display: block;
-  font-size: 55px;
-  height: 83%;
-  overflow: hidden;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 89.65px;
-  text-transform: none;
-  letter-spacing: 0;
-  word-spacing: 0;
-  color: #1ea416;
-}
-.cid-r6KcIuPMVY .countdown-cont {
-  background: linear-gradient(45deg, #ffffff, #ffffff);
-  max-width: 700px;
-  border-radius: 3px;
-  margin: 0 auto;
-}
-@media (max-width: 768px) {
-  .cid-r6KcIuPMVY .dot {
-    display: none;
-  }
-}
-@media (max-width: 543px) {
-  .cid-r6KcIuPMVY .number-wrap {
-    margin-bottom: 15px;
-  }
-}
-@media (max-width: 550px) {
-  .cid-r6KcIuPMVY .col-xs-3 {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  .cid-r6KcIuPMVY .number-wrap {
-    min-width: auto;
-  }
-}
-@media (max-width: 440px) {
-  .cid-r6KcIuPMVY .number,
-  .cid-r6KcIuPMVY .dot {
-    font-size: 40px;
-  }
-}
-@media (max-width: 380px) {
-  .cid-r6KcIuPMVY .period {
-    font-size: 0.8rem;
-  }
-}
-.cid-r6KcIuPMVY H4 {
-  color: #000000;
-  text-align: center;
-}
-.cid-r6zqm0ZSqV {
-  padding-top: 0px;
-  padding-bottom: 15px;
-  background-color: #ffffff;
-}
-.cid-r6zqm0ZSqV .mbr-text,
-.cid-r6zqm0ZSqV blockquote {
-  color: #767676;
-}
-.cid-r6zqm0ZSqV .mbr-text P {
-  text-align: center;
-  color: #000000;
-}
-.cid-r6KfG3f36g {
-  padding-top: 0px;
-  padding-bottom: 30px;
-  background-color: #ffffff;
-}
-.cid-r6KfG3f36g .mbr-section-subtitle {
-  color: #767676;
-}
-.cid-r6KfG3f36g .media-row {
-  display: -webkit-flex;
-  justify-content: center;
-  -webkit-justify-content: center;
-}
-.cid-r6KfG3f36g .team-item {
-  transition: all .2s;
-  margin-bottom: 2rem;
-}
-.cid-r6KfG3f36g .team-item .item-image img {
-  width: 100%;
-}
-.cid-r6KfG3f36g .team-item .item-name p {
-  margin-bottom: 0;
-}
-.cid-r6KfG3f36g .team-item .item-role p {
-  margin-bottom: 0;
-}
-.cid-r6KfG3f36g .team-item .item-social {
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  -webkit-justify-content: center;
-}
-.cid-r6KfG3f36g .team-item .item-social .socicon {
-  color: #232323;
-  font-size: 17px;
-}
-.cid-r6KfG3f36g .team-item .item-caption {
-  background: #ffffff;
-}
-.cid-r6KfG3f36g .item-name {
-  color: #000000;
-}
-.cid-r6KfG3f36g .item-role P {
-  color: #000000;
-}
-.cid-r6KfG3f36g .item-name B {
-  color: #000000;
-}
-.cid-r6yc14mR1g {
-  padding-top: 30px;
-  padding-bottom: 0px;
-  background-color: #1ea416;
-}
-.cid-r6yc14mR1g H2 {
-  color: #ffffff;
-}
 .cid-r6K8GH4rH4 {
-  padding-top: 60px;
+  padding-top: 0px;
   padding-bottom: 45px;
   background-color: #ffffff;
 }
@@ -1999,84 +2004,10 @@ body {
 .cid-r6gDMObQHM B {
   color: #000000;
 }
-.cid-r6i8ksGyZs {
-  padding-top: 0px;
-  padding-bottom: 15px;
+.cid-r6KAjJ3ZSX {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1ea416;
-}
-.cid-r6zLgTdMUU {
-  padding-top: 45px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-r6zLgTdMUU .content {
-    text-align: center;
-  }
-  .cid-r6zLgTdMUU .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-r6zLgTdMUU .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-r6zLgTdMUU .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-r6zLgTdMUU .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-r6zLgTdMUU .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-r6zLgTdMUU .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-r6zLgTdMUU .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  -webkit-flex-wrap: wrap;
-}
-.cid-r6zLgTdMUU .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-r6zLgTdMUU .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-r6zLgTdMUU .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-r6zLgTdMUU .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-r6zLgTdMUU .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-r6zLgTdMUU H5 {
-  color: #1ea416;
-}
-.cid-r6zLgTdMUU P {
-  color: #232323;
 }
 .cid-r6cjAv132S .navbar {
   background: #ffffff;
