create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2889,84 +2889,10 @@ body {
 .cid-r6hlxI09WX B {
   color: #000000;
 }
-.cid-r6hlYKKxJc {
-  padding-top: 0px;
-  padding-bottom: 15px;
+.cid-r6KBBLH8Pt {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1ea416;
-}
-.cid-r6zL1HgEhb {
-  padding-top: 45px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-r6zL1HgEhb .content {
-    text-align: center;
-  }
-  .cid-r6zL1HgEhb .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-r6zL1HgEhb .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-r6zL1HgEhb .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-r6zL1HgEhb .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-r6zL1HgEhb .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-r6zL1HgEhb .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-r6zL1HgEhb .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  -webkit-flex-wrap: wrap;
-}
-.cid-r6zL1HgEhb .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-r6zL1HgEhb .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-r6zL1HgEhb .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-r6zL1HgEhb .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-r6zL1HgEhb .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-r6zL1HgEhb H5 {
-  color: #1ea416;
-}
-.cid-r6zL1HgEhb P {
-  color: #232323;
 }
 .cid-r6cjAv132S .navbar {
   background: #ffffff;
@@ -3640,84 +3566,10 @@ body {
   color: #1ea416;
   text-align: left;
 }
-.cid-r6hl0wPztM {
-  padding-top: 0px;
-  padding-bottom: 15px;
+.cid-r6KBd9b6UY {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1ea416;
-}
-.cid-r6zL56yjpR {
-  padding-top: 45px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-r6zL56yjpR .content {
-    text-align: center;
-  }
-  .cid-r6zL56yjpR .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-r6zL56yjpR .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-r6zL56yjpR .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-r6zL56yjpR .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-r6zL56yjpR .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-r6zL56yjpR .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-r6zL56yjpR .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  -webkit-flex-wrap: wrap;
-}
-.cid-r6zL56yjpR .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-r6zL56yjpR .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-r6zL56yjpR .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-r6zL56yjpR .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-r6zL56yjpR .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-r6zL56yjpR H5 {
-  color: #1ea416;
-}
-.cid-r6zL56yjpR P {
-  color: #232323;
 }
 .cid-r6cjAv132S .navbar {
   background: #ffffff;
@@ -4886,84 +4738,10 @@ body {
 .cid-r6yDB1UuVn .mbr-text B {
   color: #000000;
 }
-.cid-r6hRUM3z4E {
-  padding-top: 0px;
-  padding-bottom: 15px;
+.cid-r6KB8oGHjx {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1ea416;
-}
-.cid-r6zLacAhxW {
-  padding-top: 45px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-r6zLacAhxW .content {
-    text-align: center;
-  }
-  .cid-r6zLacAhxW .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-r6zLacAhxW .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-r6zLacAhxW .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-r6zLacAhxW .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-r6zLacAhxW .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-r6zLacAhxW .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-r6zLacAhxW .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  -webkit-flex-wrap: wrap;
-}
-.cid-r6zLacAhxW .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-r6zLacAhxW .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-r6zLacAhxW .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-r6zLacAhxW .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-r6zLacAhxW .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-r6zLacAhxW H5 {
-  color: #1ea416;
-}
-.cid-r6zLacAhxW P {
-  color: #232323;
 }
 .cid-r6yaYGP0qe {
   padding-top: 120px;
@@ -6340,84 +6118,10 @@ body {
 .cid-r6FxYcMbFN .panel-text {
   color: #000000;
 }
-.cid-r6zKVw2nuN {
-  padding-top: 0px;
-  padding-bottom: 15px;
+.cid-r6KBxR2tYq {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1ea416;
-}
-.cid-r6zKSM4PLB {
-  padding-top: 45px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-r6zKSM4PLB .content {
-    text-align: center;
-  }
-  .cid-r6zKSM4PLB .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-r6zKSM4PLB .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-r6zKSM4PLB .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-r6zKSM4PLB .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-r6zKSM4PLB .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-r6zKSM4PLB .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-r6zKSM4PLB .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  -webkit-flex-wrap: wrap;
-}
-.cid-r6zKSM4PLB .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-r6zKSM4PLB .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-r6zKSM4PLB .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-r6zKSM4PLB .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-r6zKSM4PLB .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-r6zKSM4PLB H5 {
-  color: #1ea416;
-}
-.cid-r6zKSM4PLB P {
-  color: #232323;
 }
 .cid-r6cjAv132S .navbar {
   background: #ffffff;
@@ -6977,84 +6681,10 @@ body {
 .cid-r6Kos5vVCe H2 {
   text-align: center;
 }
-.cid-r6zHg9j6q9 {
-  padding-top: 0px;
-  padding-bottom: 15px;
+.cid-r6KBt0LpCO {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1ea416;
-}
-.cid-r6zHeEJyU3 {
-  padding-top: 45px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-r6zHeEJyU3 .content {
-    text-align: center;
-  }
-  .cid-r6zHeEJyU3 .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-r6zHeEJyU3 .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-r6zHeEJyU3 .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-r6zHeEJyU3 .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-r6zHeEJyU3 .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-r6zHeEJyU3 .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-r6zHeEJyU3 .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  -webkit-flex-wrap: wrap;
-}
-.cid-r6zHeEJyU3 .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-r6zHeEJyU3 .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-r6zHeEJyU3 .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-r6zHeEJyU3 .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-r6zHeEJyU3 .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-r6zHeEJyU3 H5 {
-  color: #1ea416;
-}
-.cid-r6zHeEJyU3 P {
-  color: #232323;
 }
 .cid-r6FFv0tZCG {
   padding-top: 120px;
@@ -8395,82 +8025,8 @@ body {
   text-align: left;
   color: #000000;
 }
-.cid-r6FFvj2dor {
-  padding-top: 0px;
-  padding-bottom: 15px;
+.cid-r6KB0EYB6p {
+  padding-top: 30px;
+  padding-bottom: 30px;
   background-color: #1ea416;
-}
-.cid-r6FFvk8EqN {
-  padding-top: 45px;
-  padding-bottom: 0px;
-  background-color: #ffffff;
-}
-@media (max-width: 767px) {
-  .cid-r6FFvk8EqN .content {
-    text-align: center;
-  }
-  .cid-r6FFvk8EqN .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-r6FFvk8EqN .media-wrap {
-    margin-bottom: 1rem;
-  }
-}
-.cid-r6FFvk8EqN .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
-}
-.cid-r6FFvk8EqN .media-wrap img {
-  height: 6rem;
-}
-@media (max-width: 767px) {
-  .cid-r6FFvk8EqN .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-r6FFvk8EqN .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-r6FFvk8EqN .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
-  display: -webkit-flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
-  -webkit-flex-wrap: wrap;
-}
-.cid-r6FFvk8EqN .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
-}
-.cid-r6FFvk8EqN .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
-}
-.cid-r6FFvk8EqN .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
-}
-.cid-r6FFvk8EqN .footer-lower .social-list a:hover {
-  opacity: 1;
-}
-@media (max-width: 767px) {
-  .cid-r6FFvk8EqN .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
-  }
-}
-.cid-r6FFvk8EqN H5 {
-  color: #1ea416;
-}
-.cid-r6FFvk8EqN P {
-  color: #232323;
 }
