--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -42,10 +42,10 @@ body {
 }
 .display-5 {
   font-family: 'Rubik', sans-serif;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 .display-5 > .mbr-iconfont {
-  font-size: 2.4rem;
+  font-size: 2.88rem;
 }
 .display-7 {
   font-family: 'Rubik', sans-serif;
@@ -76,9 +76,9 @@ body {
     line-height: calc( 1.4 * (1rem + (1 - 1) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
-    font-size: 1.2rem;
-    font-size: calc( 1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.175rem + (1.5 - 1.175) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 1.44rem;
+    font-size: calc( 1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.28rem + (1.8 - 1.28) * ((100vw - 20rem) / (48 - 20))));
   }
 }
 /* Buttons */
@@ -4057,7 +4057,7 @@ body {
 }
 .cid-r6JXDVmpYS {
   padding-top: 0px;
-  padding-bottom: 60px;
+  padding-bottom: 45px;
   background-color: #ffffff;
 }
 .cid-r6JXDVmpYS .mbr-section-subtitle {
@@ -4153,17 +4153,19 @@ body {
 .cid-r6ybfnTEvQ H2 {
   color: #ffffff;
 }
-.cid-r6hS30YBhM {
+.cid-r6KY51UHjB {
   padding-top: 60px;
-  padding-bottom: 15px;
+  padding-bottom: 30px;
   background-color: #ffffff;
 }
-.cid-r6hS30YBhM .mbr-text,
-.cid-r6hS30YBhM blockquote {
+.cid-r6KY51UHjB .mbr-text,
+.cid-r6KY51UHjB blockquote {
   color: #767676;
 }
-.cid-r6hS30YBhM .mbr-text P {
+.cid-r6KY51UHjB .mbr-text {
   text-align: left;
+}
+.cid-r6KY51UHjB .mbr-text B {
   color: #000000;
 }
 .cid-r6yjPlnRuy {
